Introduced modular template management for Nginx configs, enabling cleaner and reusable code with the addition of `basic.template.js`. Added utility functions (`sudoWriteFsFile`, `sudoLinkFsFile`, etc.) to handle file operations requiring elevated privileges. Updated CLI commands and README to reflect these changes, improving maintainability and functionality.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "fast-nginx",
-  "version": "1.0.1",
+  "version": "1.0.6",
   "description": "A fast and easy-to-use CLI tool to configure your domain with Nginx using just a single command.",
   "main": "bin/cli.js",
   "bin": {
-    "fastnginx": "./bin/cli.js"
+    "fast-nginx": "./bin/cli.js"
   },
   "scripts": {
     "test": "node bin/cli.js --help",
@@ -50,6 +50,7 @@
   "preferGlobal": true,
   "files": [
     "bin/",
+    "src/",
     "README.md",
     "LICENSE"
   ]
